<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="move_ship_tutorial">Move Ship</string>
    <string name="app_name">BattleShips</string>
	<string name="view_tutorials">View Tutorials</string>
	<string name="aim_fire_tutorial">Aim and Fire</string>
	<string name="set_ship_game_tutorial">Set Ships Game</string>
	<string name="tutorials_label">Tutorials</string>
	<string name="menu_play">Play</string>
	<string name="menu_options">Settings</string>
	<string name="menu_about">Credits</string>
	<string name="menu_quit">Quit</string>
	<string name="menu_single">Singleplayer</string>
	<string name="menu_multi">Multiplayer</string>
	<string name="menu_tutorials">Tutorials</string>
	<string name="menu_back">Back</string>
	<string name="about">Authors:\n\nRoss\nNikola\nIvo\nVasko\nTony</string>
	<string name="settings_sound">Sound</string>
	<string name="settings_vibration">Vibration</string>
	<string name="settings_difficulty">Difficulty</string>
	<string name="settings_apply_prefs">Apply</string>
	<string name="game_you">You</string>
	<string name="game_enemy">Enemy</string>
	<string name="game_button_menu">Menu</string>
	<string name="game_button_fire">Fire</string>
<string name="game_sound">Game Sound</string>
<string name="game_music">Game Music</string>
<string name="sound_theme">Theme</string>
<string name="spookey_sound_theme">Spookey</string>
<string name="lightsout_sound_theme">Lightsout</string>
</resources>
